objects/Postal_Code_Mapping__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Two digit country code</description>
    <inlineHelpText>Two digit country code</inlineHelpText>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>