objects/Postal_Code_Mapping__c/fields/Current_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Province_Code__c</fullName>
    <label>Current Province Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>