objects/Postal_Code_Mapping__c/fields/Mapped_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Province_Code__c</fullName>
    <label>Mapped Province Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>